# zhihu-mcp

./: .gitignore  README.md  __init__.py  login.py  main.py  pyproject.toml  requirements.txt
browser/: manager.py
cookies/: _search_links.json
search_results/: 为什么这波 AI 浪潮没有带来大量的就业岗位__20260328_183230.md  杭州人才政策福利__20260328_163255.md  考公_20260328_172310.md
server/: tools.py
skills/zhihu-auth/: SKILL.md
skills/zhihu-publish/: SKILL.md
zhihu/: actions.py  cookies.py  service.py
