[project]
name = "zhihu-mcp"
version = "1.0.0"
description = "MCP server for Zhihu (知乎) - AI-driven content automation via browser"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "playwright>=1.40.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
]

[project.scripts]
zhihu-mcp = "main:main"
zhihu-login = "login:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
